--- a/matrix/templates/matrix/base.html
+++ b/matrix/templates/matrix/base.html
@@ -2,6 +2,9 @@
 {% load static %}
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+        crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title></title>
